DATE       AUTHOR       CHANGE
---------- -----------  -------------------------------------------------------
2002-09-20 nonchocoboy  Midworld compiles again in VisualStudio.NET
                        NEW VERSION: 0.2.1
2002-09-17 nonchocoboy  Merged in the opensg-branch to the HEAD. This completes
                        the initial iteration of adding OpenSG into Midworld as
                        the scene graph.
                        NEW VERSION: 0.2.0
2002-09-17 nonchocoboy  Added a resource manager to handle the details of
                        mapping resource names to their file names.
2002-09-17 nonchocoboy  Added caching semantics to the model manager.
2002-09-16 nonchocoboy  Added a model manager to consolidate OpenSG model
                        loading.
2002-09-16 nonchocoboy  Added in scene management using the OpenSG scenegraph.
2002-09-09 nonchocoboy  Removed dependency between states through the use of
                        a new StateFactory. States now invoke transitions to
                        each other by name and the factory creates the
                        necessary implementation.
2002-09-09 nonchocoboy  Added caching semantics to the SoundEffectManager so
                        that sound effects are loaded into memory when they are
                        first needed and then reused thereafter.
2002-09-08 nonchocoboy  SpreadGun discharges a single bullet at a time,
                        iterating over the barrels.
2002-09-07 nonchocoboy  Added version information in Version.h
                        NEW VERSION: 0.1.0
2002-09-07 nonchocoboy  Entities now have a UID associated with them. The
                        AbstractEntity class was added to manage UIDs in a
                        common way for most entity implementations.
2002-09-07 nonchocoboy  Added UIDManager for automatic unique ID management.
2002-07-29 nonchocoboy  Added collision notifcation event framework.